--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <span class="btn-open"><i class="fas fa-bars"></i></span>
         <nav class="nav"><span class="btn-close"><i class="fas fa-times"></i></span>
 
-          <a href="info.html"><div class="btn1">Qui suis-je</div></a>
+          <a class="link-btn" href="info.html"><div class="btn1">Qui suis-je</div></a>
         
-              <a href="project.html"><div class="btn1">Mes Projets</div></a>
+              <a class="link-btn" href="project.html"><div class="btn1">Mes Projets</div></a>
 
-                <a href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
+                <a class="link-btn" href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
                   > <div class="btn1">Curriculum vitae </div></a
                 >
         </nav>
@@ -67,14 +67,10 @@
           <p class="Pright">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi impedit, eos, laborum dignissimos sed libero obcaecati maiores cupiditate nobis saepe mollitia explicabo enim tempora vero doloribus neque. Magnam repudiandae in totam, iure error, voluptates neque nostrum quo doloribus, illo tempora repellat obcaecati pariatur! Delectus explicabo iste distinctio laudantium, ea aliquam.
           </p>
-          <div class="button">
-            <a href="project.html"><div class="btn1">Project</div></a>
-              <a
-                href="./image/CV QUENTIN 2021.pdf"
-                target="_blank"
-                download="CV QUENTIN"
-                > <div class="btn1">Curriculum vitae </div></a
-              >
+          <div class="container">
+            <a class="btn" href="project.html">Projet</a>
+
+            <a class="btn" target="_blank" download="CV quentin gibert" href="./image/CV QUENTIN 2021.pdf">Curriculum vitae</a>
             </div>
           </div>
         </div>
