--- a/info.html
+++ b/info.html
@@ -18,6 +18,6 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veritatis doloribus voluptas dignissimos quaerat, inventore quidem consectetur reprehenderit odio sapiente aliquid velit qui asperiores quasi ipsam adipisci error repudiandae? Asperiores tempore minima voluptates quia temporibus iure maxime aspernatur sed, maiores explicabo accusantium repellat numquam officia? Nostrum ipsum perferendis nihil perspiciatis.
             </p>
         </div>
-        <a id="home" href="index.html">Retour à l'accueil</a>
+        <a class="btn" href="index.html">Retour à l'accueil</a>
 </body>
 </html>
