--- a/project.html
+++ b/project.html
@@ -9,12 +9,11 @@
   </head>
 
   <body class="project-body">
-    <a id="home" href="index.html">Retour l'accueil</a>
     <h1 class="title-project">Personnal project</h1>
   </body>
   <div class="main-project">
     <div class="card card-1">
-      <a target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-1.png" alt=""
       /></a>
       <p class="info-project">
@@ -24,7 +23,7 @@
     </div>
 
     <div class="card card-2">
-      <a target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -34,7 +33,7 @@
     </div>
 
     <div class="card card-3">
-      <a target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -44,7 +43,7 @@
     </div>
 
     <div class="card card-4">
-      <a target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -52,5 +51,8 @@
         tenetur atque incidunt deleniti rem, laudantium quidem eius ut?
       </p>
     </div>
+  </div>
+  <div class="container-btn">
+  <a class="btn" href="./index.html">Retour à l'acceuil</a>
   </div>
 </html>
