--- a/project.html
+++ b/project.html
@@ -53,6 +53,6 @@
     </div>
   </div>
   <div class="container-btn">
-  <a class="btn" href="./index.html">Retour à l'acceuil</a>
+  <a class="btn-project" href="./index.html">Retour à l'acceuil</a>
   </div>
 </html>
