--- a/project.html
+++ b/project.html
@@ -13,7 +13,10 @@
   </body>
   <div class="main-project">
     <div class="card card-1">
-      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a
+        class="link-project"
+        target="_blank"
+        href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-1.png" alt=""
       /></a>
       <p class="info-project">
@@ -23,7 +26,10 @@
     </div>
 
     <div class="card card-2">
-      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a
+        class="link-project"
+        target="_blank"
+        href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -33,7 +39,10 @@
     </div>
 
     <div class="card card-3">
-      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a
+        class="link-project"
+        target="_blank"
+        href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -43,7 +52,10 @@
     </div>
 
     <div class="card card-4">
-      <a class="link-project" target="_blank" href="https://quenting59.github.io/portfolio/"
+      <a
+        class="link-project"
+        target="_blank"
+        href="https://quenting59.github.io/portfolio/"
         ><img class="img-project" src="./image/screen-2.png" alt=""
       /></a>
       <p class="info-project">
@@ -53,6 +65,6 @@
     </div>
   </div>
   <div class="container-btn">
-  <a class="btn-project" href="./index.html">Retour à l'acceuil</a>
+    <a class="btn-project" href="./accueil.html">Retour à l'acceuil</a>
   </div>
 </html>
