--- a/accueil.html
+++ b/accueil.html
@@ -16,6 +16,10 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"></script> -->
   </head>
   <body>
+    <div class="loading">
+      <h1 class="titleLoader">Hello, my name is Quentin.</h1>
+      <p class="subtitle">Bienvenue sur mon portfolio</p>
+    </div>
     <div class="main">
       <div class="left">
         <span class="btn-open"><i class="fas fa-bars"></i></span>
