--- a/project.html
+++ b/project.html
@@ -65,6 +65,6 @@
     </div>
   </div>
   <div class="container-btn">
-    <a class="btn-project" href="./accueil.html">Retour à l'acceuil</a>
+    <a class="btn-project" href="./accueil.html">Retour à l'accueil</a>
   </div>
 </html>
