--- a/index.html
+++ b/index.html
@@ -4,19 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=Zen+Kaku+Gothic+New:wght@300&display=swap"
       rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+      crossorigin="anonymous"
     />
-
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfolio|Quentin</title>
+    <script src="app.js" defer></script>
   </head>
-  <body class="bodyLoader">
-    <h1 class="titleLoader">Hello, my name is Quentin.</h1>
-    <p class="subtitle">Bienvenu sur mon portfolio</p>
-    <div class="container-btn">
-      <a class="btn-project" href="./accueil.html">Accueil</a>
+  <body>
+    <div class="modal">
+      <div class="container-btn">
+        <button class="btn-project">Retour à l'accueil</button>
+      </div>
+      <div class="slider">
+        <div class="slides">
+          <!-- radio buttons start-->
+          <input type="radio" name="radio-btn" id="radio1" />
+          <input type="radio" name="radio-btn" id="radio2" />
+          <input type="radio" name="radio-btn" id="radio3" />
+          <input type="radio" name="radio-btn" id="radio4" />
+          <!-- radio buttons end -->
+          <!-- slide image start -->
+          <div class="slide first">
+            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+              ><img src="./image/screen-1.png" alt=""
+            /></a>
+          </div>
+  
+          <div class="slide">
+            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+              ><img src="/image/logo.png" alt=""
+            /></a>
+          </div>
+  
+          <div class="slide">
+            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+              ><img src="./image/screen-1.png" alt=""
+            /></a>
+          </div>
+  
+          <div class="slide">
+            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+              ><img src="./image/screen-1.png" alt=""
+            /></a>
+          </div>
+          <!-- slide image end -->
+          <!-- automatique nav start -->
+          <div class="navigation-auto">
+            <div class="auto-btn1"></div>
+            <div class="auto-btn2"></div>
+            <div class="auto-btn3"></div>
+            <div class="auto-btn4"></div>
+          </div>
+          <!--automatique nav end  -->
+        </div>
+        <!-- manuel navigation start -->
+        <div class="navigation-manuel">
+          <label for="radio1" class="manuel-btn"></label>
+          <label for="radio2" class="manuel-btn"></label>
+          <label for="radio3" class="manuel-btn"></label>
+          <label for="radio4" class="manuel-btn"></label>
+        </div>
+  
+        <!-- manuel navigation end -->
+      </div>
+      <!-- image slider end -->
+    </div>
+    </div>
+    <div class="loading">
+      <h1 class="titleLoader">Bonjour, je m'appelle Quentin.</h1>
+      <p class="subtitle">Bienvenue sur mon portfolio</p>
+    </div>
+    <div class="main">
+      <div class="left">
+        <span class="btn-open"><i class="fas fa-bars"></i></span>
+        <nav class="nav"><span class="btn-close"><i class="fas fa-times"></i></span>
+
+          <a class="link-btn" href="info.html"><div class="btn1">Qui suis-je</div></a>
+        
+              <a class="link-btn" href="project.html"><div class="btn1">Mes Projets</div></a>
+
+                <a class="link-btn" href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
+                  > <div class="btn1">Curriculum vitae </div></a
+                >
+        </nav>
+        <div class="title">
+          
+        </div>
+        <div class="gif">
+        </div>
+        <div class="footer">
+          <h3>Email</h3>
+          <p>quentingibert6@gmail.com</p>
+
+          <h3>Téléphone</h3>
+          <p>06.77.60.95.02</p>
+          <h3>Réseaux</h3>
+          <div class="network">
+            <p class="reseau">
+              <a href="https://github.com/quentinG59" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/quentin-gibert-652848207/"
+                target="_blank"
+                ><i class="fab fa-linkedin-in"></i>
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <div class="img"></div>
+        <!-- <img
+          class="image"
+          src="./image/photo profil.jpg"
+          alt="photo de profil"
+        /> -->
+        <div class="profile">
+          <h1>Gibert Quentin</h1>
+          <h2>Developpeur</h2>
+          <p class="Pright">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi impedit, eos, laborum dignissimos sed libero obcaecati maiores cupiditate nobis saepe mollitia explicabo enim tempora vero doloribus neque. Magnam repudiandae in totam, iure error, voluptates neque nostrum quo doloribus, illo tempora repellat obcaecati pariatur! Delectus explicabo iste distinctio laudantium, ea aliquam.
+          </p>
+          <div class="container">
+            <button class="btn" id="projet">Projets</button>
+            <a class="btn" target="_blank" href="./CV.html">Curriculum vitae</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
