--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 
           <a class="link-btn" href="info.html"><div class="btn1">Qui suis-je</div></a>
         
-              <a class="link-btn" href="project.html"><div class="btn1">Mes Projets</div></a>
+              <a  class="link-btn"><div class="btn1">Mes Projets</div></a>
 
-                <a class="link-btn" href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
+                <a  class="link-btn" href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
                   > <div class="btn1">Curriculum vitae </div></a
                 >
         </nav>
