--- a/CV.html
+++ b/CV.html
@@ -10,7 +10,7 @@
   <body>
     <embed
       class="curriculum"
-      src="./image/CV QUENTIN 2021.pdf"
+      src="./image/CV-QUENTIN-2021.pdf"
       type="application/pdf"
     />
   </body>
