--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <script src="app.js" defer></script>
   </head>
   <body>
+    <!-- !modal -->
     <div class="modal">
       <div class="container-btn">
         <button class="btn-project">Retour à l'accueil</button>
       </div>
+      <!-- !carrousel -->
       <div class="slider">
         <div class="slides">
           <!-- radio buttons start-->
@@ -33,19 +35,19 @@
               ><img src="./image/screen-1.png" alt=""
             /></a>
           </div>
-  
+
           <div class="slide">
             <a target="_blank" href="https://quenting59.github.io/portfolio/"
               ><img src="/image/logo.png" alt=""
             /></a>
           </div>
-  
+
           <div class="slide">
             <a target="_blank" href="https://quenting59.github.io/portfolio/"
               ><img src="./image/screen-1.png" alt=""
             /></a>
           </div>
-  
+
           <div class="slide">
             <a target="_blank" href="https://quenting59.github.io/portfolio/"
               ><img src="./image/screen-1.png" alt=""
@@ -68,34 +70,43 @@
           <label for="radio3" class="manuel-btn"></label>
           <label for="radio4" class="manuel-btn"></label>
         </div>
-  
+
         <!-- manuel navigation end -->
       </div>
       <!-- image slider end -->
     </div>
-    </div>
+    <!-- !animation loading -->
     <div class="loading">
       <h1 class="titleLoader">Bonjour, je m'appelle Quentin.</h1>
       <p class="subtitle">Bienvenue sur mon portfolio</p>
+      <button id="skip" class="btn-project">skip</button>
     </div>
+    <!-- ! -->
     <div class="main">
       <div class="left">
         <span class="btn-open"><i class="fas fa-bars"></i></span>
-        <nav class="nav"><span class="btn-close"><i class="fas fa-times"></i></span>
+        <nav class="nav">
+          <span class="btn-close"><i class="fas fa-times"></i></span>
 
-          <a class="link-btn" href="info.html"><div class="btn1">Qui suis-je</div></a>
-        
-              <a  class="link-btn"><div class="btn1">Mes Projets</div></a>
+          <a class="link-btn" href="info.html"
+            ><div class="btn1">Qui suis-je</div></a
+          >
 
-                <a  class="link-btn" href="./image/CV QUENTIN 2021.pdf"target="_blank"download="CV QUENTIN"
-                  > <div class="btn1">Curriculum vitae </div></a
-                >
+          <a href="./projets.html" class="link-btn"
+            ><div class="btn1">Mes Projets</div></a
+          >
+
+          <a
+            class="link-btn"
+            href="./image/CV-QUENTIN-2021.pdf"
+            target="_blank"
+            download="CV QUENTIN"
+          >
+            <div class="btn1">Curriculum vitae</div></a
+          >
         </nav>
-        <div class="title">
-          
-        </div>
-        <div class="gif">
-        </div>
+        <div class="title"></div>
+        <div class="gif"></div>
         <div class="footer">
           <h3>Email</h3>
           <p>quentingibert6@gmail.com</p>
@@ -128,12 +139,16 @@
           <h1>Gibert Quentin</h1>
           <h2>Developpeur</h2>
           <p class="Pright">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi impedit, eos, laborum dignissimos sed libero obcaecati maiores cupiditate nobis saepe mollitia explicabo enim tempora vero doloribus neque. Magnam repudiandae in totam, iure error, voluptates neque nostrum quo doloribus, illo tempora repellat obcaecati pariatur! Delectus explicabo iste distinctio laudantium, ea aliquam.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
+            impedit, eos, laborum dignissimos sed libero obcaecati maiores
+            cupiditate nobis saepe mollitia explicabo enim tempora vero
+            doloribus neque. Magnam repudiandae in totam, iure error, voluptates
+            neque nostrum quo doloribus, illo tempora repellat obcaecati
+            pariatur! Delectus explicabo iste distinctio laudantium, ea aliquam.
           </p>
           <div class="container">
             <button class="btn" id="projet">Projets</button>
             <a class="btn" target="_blank" href="./CV.html">Curriculum vitae</a>
-            </div>
           </div>
         </div>
       </div>
