--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
           <!-- radio buttons end -->
           <!-- slide image start -->
           <div class="slide first">
-            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+            <a
+              target="_blank"
+              href="https://pagination-project-quentin.netlify.app/"
               ><img src="./image/screen-1.png" alt=""
             /></a>
           </div>
 
           <div class="slide">
             <a target="_blank" href="https://quenting59.github.io/portfolio/"
-              ><img src="/image/logo.png" alt=""
+              ><img src="./image/screen-2.png" alt=""
             /></a>
           </div>
 
@@ -81,8 +83,9 @@
       <p class="subtitle">Bienvenue sur mon portfolio</p>
       <button id="skip" class="btn-project">skip</button>
     </div>
-    <!-- ! -->
+    <!-- !Debut DIV MAIN -->
     <div class="main">
+      <!-- !accueil mobile -->
       <div class="left">
         <span class="btn-open"><i class="fas fa-bars"></i></span>
         <nav class="nav">
@@ -98,7 +101,7 @@
 
           <a
             class="link-btn"
-            href="./image/CV-QUENTIN-2021.pdf"
+            href="CV.html"
             target="_blank"
             download="CV QUENTIN"
           >
@@ -128,6 +131,7 @@
           </div>
         </div>
       </div>
+      <!-- ! accueil pc -->
       <div class="right">
         <div class="img"></div>
         <!-- <img
