--- a/info.html
+++ b/info.html
@@ -24,6 +24,6 @@
         perspiciatis.
       </p>
     </div>
-    <a class="btn" href="accueil.html">Retour à l'accueil</a>
+    <a class="btn-project" href="index.html">Retour à l'accueil</a>
   </body>
 </html>
