--- a/projets.html
+++ b/projets.html
@@ -18,20 +18,22 @@
         <!-- radio buttons end -->
         <!-- slide image start -->
         <div class="slide first">
-          <a target="_blank" href="https://quenting59.github.io/portfolio/"
+          <a
+            target="_blank"
+            href="https://pagination-project-quentin.netlify.app/"
             ><img src="./image/screen-1.png" alt=""
           /></a>
         </div>
 
         <div class="slide">
-          <a target="_blank" href="https://quenting59.github.io/portfolio/"
-            ><img src="/image/logo.png" alt=""
+          <a target="_blank" href="https://projet-voyage-quentin.netlify.app/"
+            ><img src="./image/screen-2.png" alt=""
           /></a>
         </div>
 
         <div class="slide">
-          <a target="_blank" href="https://quenting59.github.io/portfolio/"
-            ><img src="./image/screen-1.png" alt=""
+          <a target="_blank" href="https://projet-todoapp-quentin.netlify.app/"
+            ><img src="./image/screen-3.png" alt=""
           /></a>
         </div>
 
