--- a/index.html
+++ b/index.html
@@ -143,12 +143,7 @@
           <h1>Gibert Quentin</h1>
           <h2>Developpeur</h2>
           <p class="Pright">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi
-            impedit, eos, laborum dignissimos sed libero obcaecati maiores
-            cupiditate nobis saepe mollitia explicabo enim tempora vero
-            doloribus neque. Magnam repudiandae in totam, iure error, voluptates
-            neque nostrum quo doloribus, illo tempora repellat obcaecati
-            pariatur! Delectus explicabo iste distinctio laudantium, ea aliquam.
+            Bonjour, originaire d'Ardéche et fraîchement installé dans la métropôle lilloise, je viens de débuter une formation développeur web et web mobile. Je vous invite à parcourir mon portfolio pour découvir quelques projets réaliser que j'ai réalisé.
           </p>
           <div class="container">
             <button class="btn" id="projet">Projets</button>
