--- a/info.html
+++ b/info.html
@@ -15,13 +15,7 @@
       <h1 class="aboutH1">Gibert Quentin</h1>
       <h2 class="aboutH2">Developpeur web et web mobile</h2>
       <p class="aboutP">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-        veritatis doloribus voluptas dignissimos quaerat, inventore quidem
-        consectetur reprehenderit odio sapiente aliquid velit qui asperiores
-        quasi ipsam adipisci error repudiandae? Asperiores tempore minima
-        voluptates quia temporibus iure maxime aspernatur sed, maiores explicabo
-        accusantium repellat numquam officia? Nostrum ipsum perferendis nihil
-        perspiciatis.
+        Bonjour, originaire d'Ardéche et fraîchement installé dans la métropôle lilloise, je viens de débuter une formation développeur web et web mobile. Je vous invite à parcourir mon portfolio pour découvir quelques projets réaliser que j'ai réalisé.
       </p>
     </div>
     <a class="btn-project" href="index.html">Retour à l'accueil</a>
