--- a/index.html
+++ b/index.html
@@ -39,20 +39,22 @@
           </div>
 
           <div class="slide">
-            <a target="_blank" href="https://quenting59.github.io/portfolio/"
+            <a target="_blank" href="https://projet-voyage-quentin.netlify.app/"
               ><img src="./image/screen-2.png" alt=""
             /></a>
           </div>
 
           <div class="slide">
-            <a target="_blank" href="https://quenting59.github.io/portfolio/"
-              ><img src="./image/screen-1.png" alt=""
+            <a
+              target="_blank"
+              href="https://projet-todoapp-quentin.netlify.app/"
+              ><img src="./image/screen-3.png" alt=""
             /></a>
           </div>
 
           <div class="slide">
-            <a target="_blank" href="https://quenting59.github.io/portfolio/"
-              ><img src="./image/screen-1.png" alt=""
+            <a target="_blank" href="https://github.com/quentinG59"
+              ><img src="./image/screen-4.png" alt=""
             /></a>
           </div>
           <!-- slide image end -->
@@ -143,7 +145,10 @@
           <h1>Gibert Quentin</h1>
           <h2>Developpeur</h2>
           <p class="Pright">
-            Bonjour, originaire d'Ardéche et fraîchement installé dans la métropôle lilloise, je viens de débuter une formation développeur web et web mobile. Je vous invite à parcourir mon portfolio pour découvir quelques projets réaliser que j'ai réalisé.
+            Bonjour, originaire d'Ardéche et fraîchement installé dans la
+            métropôle lilloise, je viens de débuter une formation développeur
+            web et web mobile. Je vous invite à parcourir mon portfolio pour
+            découvir quelques projets réaliser que j'ai réalisé.
           </p>
           <div class="container">
             <button class="btn" id="projet">Projets</button>
